Closed
Bug 1686995
Opened 5 years ago
Closed 5 years ago
AXTextSelectionDirection and AXTextSelectionGranularity are needed for caret feedback in entries
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
RESOLVED
FIXED
86 Branch
| Tracking | Status | |
|---|---|---|
| firefox86 | --- | fixed |
People
(Reporter: eeejay, Assigned: eeejay)
References
Details
(Whiteboard: [mac2020_2])
Attachments
(1 file)
STR:
- Load
data:text/html,<input value="hello world"> - Focus and arrow around in entry
Results:
VoiceOver is silent
Expected:
VoiceOver should read the characters the caret goes over.
Notes:
With the addition of AXTextStateChangeType in bug 1680329
| Assignee | ||
Comment 1•5 years ago
|
||
.. and also add AXTextSelectionChangedFocus and AXTextStateSync when needed.
Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b571e7950ef5
Add AXTextSelectionDirection and AXTextSelectionGranularity to text selection events. r=morgan
Comment 3•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox86:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•