accessible/mac/Platform.mm
@@ -110,10 +110,11 @@ void ProxyStateChangeEvent(ProxyAccessible* aProxy, uint64_t aState,
 void ProxyCaretMoveEvent(ProxyAccessible* aTarget, int32_t aOffset,
                          bool aIsSelectionCollapsed) {
   mozAccessible* wrapper = GetNativeFromGeckoAccessible(aTarget);
+  MOXTextMarkerDelegate* delegate =
+      [MOXTextMarkerDelegate getOrCreateForDoc:aTarget->Document()];
+  [delegate setCaretOffset:aTarget at:aOffset];
   if (aIsSelectionCollapsed) {
     // If selection is collapsed, invalidate selection.
-    MOXTextMarkerDelegate* delegate =
-        [MOXTextMarkerDelegate getOrCreateForDoc:aTarget->Document()];
     [delegate setSelectionFrom:aTarget at:aOffset to:aTarget at:aOffset];
   }
 
